setting up db, render,  and json files
