# routes/index.js
@@ -2,7 +2,7 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/', require('./swagger'));
-router.use('/contacts', require('./contacts'));
+router.use('/recipes', require('./recipes'));
 
 // eslint-disable-next-line no-undef
 module.exports = router;
