# routes/recipes.js
@@ -1,0 +1,17 @@
+const express = require('express');
+const router = express.Router();
+
+const recipesController = require('../controllers/recipes');
+
+router.get('/', recipesController.getAll);
+
+router.get('/:id', recipesController.getSingle);
+
+router.post('/', recipesController.createRecipe);
+
+router.put('/:id', recipesController.updateRecipe);
+
+router.delete('/:id', recipesController.deleteRecipe);
+
+// eslint-disable-next-line no-undef
+module.exports = router;
